--- a/Semana 2/ProjetoJS.html
+++ b/Semana 2/ProjetoJS.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjetoJS.js</title>
-    <script src="ProjetoJS.js"></script>
+    <script src="ProjetoJS(Semana 2).js"></script>
 </head>
 <body>
     
